# MeepStudio

./: .gitignore  Makefile  README.md  docker-compose.yml  folder_tree.txt  package.json  pnpm-lock.yaml  quantumWebsiteLayout.md  tailwind.config.js  tsconfig.base.json  turbo.json
.github/workflows/: pages.yml  release.yml
.husky/: pre-commit
apps/backend/: api.py  environment.yml
apps/desktop/: next.config.ts  tailwind.config.ts  tsconfig.json
apps/desktop/src/: main.js  preload.ts
apps/website/: .env.production  mdx-components.tsx  next.config.ts  package.json  tailwind.config.js  test-dial.html  tsconfig.json
apps/website/app/: ClientLayoutShell.tsx  global.css  layout.tsx  page.tsx
apps/website/app/contribute/: page.tsx
apps/website/app/documentation/: page.tsx
apps/website/app/download/: page.tsx
apps/website/app/meepstudio/: page.tsx
apps/website/app/q3/: page.tsx
apps/website/app/updates/: page.tsx
apps/website/changelog/: a1.0.0.yml  a2.0.0.yml  a3.0.0.yml  example.yml  index.ts
apps/website/pkg/: wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
apps/website/public/: changelog-meta.json
apps/website/scripts/: build-changelog.js
apps/website/wasm/: Cargo.toml
apps/website/wasm/src/: lib.rs
apps/website/wasm/src/lattice_calculations/: lattice_points.rs  matrix_calculations.rs  voronoi_cells.rs  voronoi_separation.rs
apps/website/wasm/src/numerical_calculations/: fourier_transform.rs
assets/icons/: iconGenerator.ipynb
docker/: backend.Dockerfile  desktop.Dockerfile  website.Dockerfile
(+18 files in other folders)
