[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
ndarray = "0.16"
num-complex = "0.4"
rustfft = "6.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"